--- a/blogpost.html
+++ b/blogpost.html
@@ -1,8 +1,9 @@
-¡<html lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titulo del post</title>
+    <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
     <h1>Aqui vamos a hacer un blogpost</h1>
