--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titulo del post</title>
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="css/estilos/estilos.css">
 </head>
 <body>
     <h1>Aqui vamos a hacer un blogpost</h1>
