--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo del post</title>
+    <title>Bienvenido a Hiperblog</title>
     <link rel="stylesheet" href="css/estilos/estilos.css">
 </head>
 <body>
